text align fix

--- a/public_html/css/my_account.css
+++ b/public_html/css/my_account.css
@@ -138,6 +138,10 @@
     text-align: right;
 }
 
+#my_account .my_items.picture_list li.last {
+    text-align: left;
+}
+
 #my_account .my_items.picture_list .item_detail {
     height: 80px;
     max-width: 350px;
